readability fix

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -18,3 +18,7 @@
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
 }
+
+.button-book{
+  border-radius: 20px;
+}
